Dependencies documentation and tidy up

--- a/jupyter_notebooks/Population_and_median_income_growth_in_Finland_2013-2017_by_postal_code_area.ipynb
+++ b/jupyter_notebooks/Population_and_median_income_growth_in_Finland_2013-2017_by_postal_code_area.ipynb
@@ -8,6 +8,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The example requires installation of packages as follows:\n",
+    "%pip install sdhpy --upgrade\n",
+    "%pip install matplotlib --upgrade\n",
+    "%pip install adjustText --upgrade"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -258,7 +270,8 @@
    ],
    "source": [
     "from sdhpy.pandas import SdhPandas\n",
-    "sdh_catalog = SdhPandas(store_apikey=\"xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx\") # copy your API key here from https://store.smartdatahub.io/\n",
+    "# Copy your API key from https://www.smartdatahub.io/ (user profile page) below\n",
+    "sdh_catalog = SdhPandas(store_apikey=\"xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx\")\n",
     "sdh_dataset = sdh_catalog.fi_sdh.postalcode_profile_finland__profile_all_observed\n",
     "df = sdh_dataset.data\n",
     "df.head()"
